026. Remove Duplicates from Sorted Array

--- a/001.Two Sum.md
+++ b/001.Two Sum.md
@@ -73,7 +73,7 @@ func twoSum(nums []int, target int) []int {
 }
 ```
 
-###### ChatGpr 解釋
+###### ChatGpt 解釋
 
 在這段程式碼中，`nums` 並沒有被直接轉換成 `hashTable`。相反，我們是在遍歷 `nums` 的過程中，逐個檢查每個元素。每當我們檢查一個新元素時，我們都會查找 `hashTable` 來判斷是否已經遇到了一個數字，使得當前數字與它相加等於 `target`。
 
